--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, 
-    user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    user-scalable=no, initial-scale=0, maximum-scale=0, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 <style type="text/css">
 body { margin: 0; padding: 0; background: #282727;}
-canvas { display: block; margin: 2000 auto; background: #ffffff; }
+canvas { display: block; margin: 2000 auto; background: #fffffd; }
 </style>
 
 
