--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <style type="text/css">
 
-canvas { display: block; margin: 2000 auto; background: #fffffd; }
+canvas { display: block; margin: 20; background: #fffffd; }
 </style>
 
 
