--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=20px, 
-    user-scalable=no, initial-scale=0, maximum-scale=0, user-scalable=0" />
+    user-scalable=yes, initial-scale=0, maximum-scale=0, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 <style type="text/css">
 
-canvas { display: block; margin: 20; background: #fffffd; }
+canvas { display: block; margin: 0 auto; background: #ffffff; }
 </style>
 
 
