--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=2000, 
-    user-scalable=yes, initial-scale=10, maximum-scale=5, user-scalable=10" />
+<meta name="viewport" content="width=0", 
+    user-scalable=yes, initial-scale=0, maximum-scale=0, user-scalable=10" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 <style type="text/css">
 
-canvas { display: block; margin: 0 auto; background: #ffffff; }
+canvas { display: block; padding: 100 : margin: 0 auto; background: #ffffff; }
 </style>
 
 
