--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <style type="text/css">
 
-canvas { display: block; padding: 100 : margin: 100 auto; background: #ffffff; }
+canvas { display: block; width: 100px: height: 50px : margin: 100 auto; background: #ffffff; }
 </style>
 
 
