--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <style type="text/css">
 
-canvas { display: block; width: 100px: height: 50px : margin: 100 auto; background: #ffffff; }
+body { margin: 0; padding: 0; background: #282727;}
+canvas { display: block; width: 100px: height: 100px : margin: 100 auto; background: #ffffff; }
 </style>
 
 
