--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ window.addEventListener('load', POP.init, false);
 window.addEventListener('resize', POP.resize, false);
 
 </script>
-
+<h2>PKS£GAMES</h2>
 
 </body>
 </html>
