--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 
 body { margin: 0; padding: 0; background: #282727;}
-canvas { display: block; width: 100px: height: 500px : margin: 100 auto; background: #ffffff; }
+canvas { display: block; width: 100px: height: 800px : margin: 100 auto; background: #ffffff; }
 </style>
 
 
@@ -485,7 +485,7 @@ window.addEventListener('load', POP.init, false);
 window.addEventListener('resize', POP.resize, false);
 
 </script>
-<h2>PKS£GAMES</h2>
+<i><h2>PKS£GAMES</h2></i>
 
 </body>
 </html>
