--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ canvas { display: block; width: 100px: height: 1000px : margin: 100 auto; backgr
 
 </head>
 <body>
+<small>¥Computer VS You¥</small>
+<hr>
 
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
 <canvas></canvas>
