--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <style type="text/css">
 
 body { margin: 0; padding: 0; background: #282727;}
-canvas { display: block; width: 100px: height: 1000px : margin: 100 auto; background: #ffffff; }
+canvas { display: block; width: 100px: height: 1000px : margin: 90 auto; background: #ffffff; }
 </style>
 
 
 
 </head>
 <body>
-<small>¥POP THEM¥</small>
+<u>small>¥POP THEM¥</small></u>
 
 
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
