--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ canvas { display: block; width: 100px: height: 1000px : margin: 90 auto; backgro
 
 </head>
 <body>
-<u>small>¥POP THEM¥</small></u>
+<u><small>¥POP THEM¥</small></u>
 
 
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
