--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ canvas { display: block; width: 100px: height: 1000px : margin: 90 auto; backgro
 </head>
 <body>
 <br>
+<u><h3>POP¥<h3><u>
 <br>
 <br>
 <br>
