--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 
 <style type="text/css">
 
-body { margin: 0; padding: 0; background: #336744;}
+
+body {
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
 canvas { display: block; width: 100px: height: 1000px : margin: 90 auto; background: #ffffff; }
 </style>
 
