--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 body {
-  background-image: url('img_girl.jpg');
+  background-image: url('1-3d-render-of-spotlights-on-a-grunge-brick-wall.jpg.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
