--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 body {
-  background-image: url('Screenshot_2023-03-21-21-15-08-404-edit_com.android.chrome.jpg');
+  background-image: url('images (1).jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
