--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
-
-canvas { display: block; width: 100px: height: 1000px : margin: 100 auto; background: #ffffff; }
+<center>
+canvas { display: block; width: 100px: height: 1000px : margin: 100 auto; background: #ffffff; }</center>
 </style>
 
 </head>
 <body>
 
 <hr>
-<br>
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
 <canvas></canvas>
 <script> 
@@ -46,7 +45,7 @@ var POP = {
 
     // set up some inital values
     WIDTH: 295, 
-    HEIGHT:  424, 
+    HEIGHT:  420, 
     scale:  1,
     // the position of the canvas
     // in relation to the screen
