--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
   background-size: cover;
 }
 <center>
-canvas { display: block; width: 100px: height: 1000px : margin: 0 auto; background: #ffffff; }</center>
+canvas { display: block; width: 100px: margin: 0 auto; background: #ffffff; }
 </style>
 
 </head>
@@ -25,6 +25,7 @@ canvas { display: block; width: 100px: height: 1000px : margin: 0 auto; backgrou
 <hr>
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
 <canvas></canvas>
+<center>
 <script> 
 
 // http://paulirish.com/2011/requestanimationframe-for-smart-animating
@@ -490,7 +491,7 @@ POP.Particle = function(x, y,r, col) {
 window.addEventListener('load', POP.init, false);
 window.addEventListener('resize', POP.resize, false);
 
-</script>
+</script></center>
 <hr> 
 <i><h2>PKS£GAMES</h2></i>
 
