--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
-<center>
+
 canvas { display: block; width: 100px: margin: 0 auto; background: #ffffff; }
 </style>
 
@@ -491,7 +491,7 @@ POP.Particle = function(x, y,r, col) {
 window.addEventListener('load', POP.init, false);
 window.addEventListener('resize', POP.resize, false);
 
-</script></center>
+</script>
 <hr> 
 <i><h2>PKS£GAMES</h2></i>
 
