--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; width: 100px: margin: 0 auto; background: #ffffff; }
+canvas { display: block; width: 100px: height:1000: margin: 0 auto; background: #ffffff; }
 </style>
 
 </head>
