--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 body {
-  background-image: url('images (1).jpeg');
+  background-image: url('Screenshot_2023-03-21-21-53-30-937.jpeg ');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
