--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 body {
-  background-image: url('Screenshot_2023-03-21-21-53-30-937.jpeg ');
+  background-image: url('IMG-20230321-WA0002.jpg ');
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -23,6 +23,7 @@ canvas { display: block; width: 100px: height:1000: margin: 0 auto; background: 
 <body>
 
 <hr>
+<br>
 <br>
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
 <canvas></canvas>
