--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ canvas { display: block; width: 100px: height:1000: margin: 0 auto; background: 
 <body>
 
 <hr>
-<br>
+
 <br>
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
 <canvas></canvas>
@@ -495,7 +495,7 @@ window.addEventListener('resize', POP.resize, false);
 
 </script>
 <hr> 
-<i><h2>PKS£GAMES</h2></i>
+<big><i><h2>PKS£GAMES</h2></i></big>
 
 </body>
 </html>
