--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; width: 100px: height:1000: margin: 0 auto; background: #ffffff; }
+body { margin: 0; padding: 0; background: #282727;}
+canvas { display: block; margin: 0 auto; background: #ffffff;; }
 </style>
 
 </head>
