--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 
 body { margin: 0; padding: 0; background: #282727;}
-canvas { display: block; margin: 0 auto; background: #ffffff;; }
+canvas { display: block; margin: 1000 auto width:200px height:400px; background: #ffffff;; }
 </style>
 
 </head>
@@ -49,7 +49,7 @@ var POP = {
 
     // set up some inital values
     WIDTH: 300, 
-    HEIGHT:  414, 
+    HEIGHT:  410, 
     scale:  1,
     // the position of the canvas
     // in relation to the screen
