--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 
 body { margin: 0; padding: 0; background: #282727;}
-canvas { display: block; margin: 500 auto width:50px height:50px; background: #ffffff;; }
+canvas { display: block; margin: 500 auto; background: #ffffff;; }
 </style>
 
 </head>
