--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, 
-    user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    user-scalable=yes, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -16,7 +16,6 @@ body {
   background-size: cover;
 }
 
-body { margin: 500; padding: 100; background: #282727;}
 canvas { display: block; margin: 500 auto; background: #ffffff;; }
 </style>
 
@@ -57,7 +56,7 @@ var POP = {
     entities: [],
     // the amount of game ticks until
     // we spawn a bubble
-    nextBubble: 7,
+    nextBubble: 9,
     // for tracking player's progress
     score: {
         taps: 0,
