--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, 
-    user-scalable=yes, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=10" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
