--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 
 body {
-  background-image: url('IMG-20230321-WA0002.jpg ');
+  background-image: url('bg.png');
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: cover;
