--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="fixed, 
-    user-scalable=yes, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -15,7 +15,7 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; margin:0 auto; background: #ffffff; }
+canvas { display: block; margin:10 auto; background: #ffffff; }
 </style>
 
 
