--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; margin:10 auto; background: #ffffff; }
+canvas { display: block; margin:0 auto height:1000 width:300; background: #ffffff; }
 </style>
 
 
