--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; margin:0 auto height:1000 width:300; background: #ffffff; }
+canvas { display: block; margin:0 auto; background: #ffffff; }
 </style>
 
 
@@ -45,7 +45,7 @@ var POP = {
 
     // set up some inital values
     WIDTH: 270, 
-    HEIGHT:  430, 
+    HEIGHT:  420, 
     scale:  1,
     // the position of the canvas
     // in relation to the screen
@@ -54,7 +54,7 @@ var POP = {
     entities: [],
     // the amount of game ticks until
     // we spawn a bubble
-    nextBubble: 10,
+    nextBubble: 9,
     // for tracking player's progress
     score: {
         taps: 0,
