--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ canvas { display: block; margin:0 auto; background: #ffffff; }
 </head>
 <body>
 <hr>
-<embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0">
+    <button type="button" onclick= <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0"> >#Music!</button>
+    
 <canvas></canvas>
 <script> 
 
