--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: cover;
+  padding:100
 }
 
 canvas { display: block; margin:0 auto; background: #ffffff; }
@@ -45,7 +46,7 @@ window.requestAnimFrame = (function(){
 var POP = {
 
     // set up some inital values
-    WIDTH: 200, 
+    WIDTH: 100, 
     HEIGHT:  410, 
     scale:  1,
     // the position of the canvas
