--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@ window.requestAnimFrame = (function(){
 var POP = {
 
     // set up some inital values
-    WIDTH: 100, 
+    WIDTH: 300, 
     HEIGHT:  410, 
     scale:  1,
+    content="width=device-width,                                                                                                                                  
     // the position of the canvas
     // in relation to the screen
     offset: {top: 0, left: 0},
