--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0", 
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     user-scalable=no,maximum-scale=1, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -23,7 +23,7 @@ canvas { display: block; margin:0 auto; background: #ffffff; }
 </head>
 <body>
 <hr>
-    <button type="button" onclick= <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0"> #Music!</button>
+    <WELCOME!>
 <hr>
 <canvas></canvas>
 <script> 
