--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@ body {
   background-size: cover;
 }
 
-canvas { display: block; margin:0 auto; width:auto;height:auto; background: #ffffff; }
+canvas { display: block; margin:0 auto; background: #ffffff; }
 </style>
 
 
 
 </head>
 <body>
-
+<hr>
 <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0">
 <canvas></canvas>
 <script> 
