--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-margin:200;
   }
 
   canvas { display: block; margin:0 auto; background: #ffffff; }
