--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </style>
   </head>
   <body>
-    <embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">
+    <hr>
+    <button onclick="<embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="2" height="0">">Click me</button>
+    <hr>
     <canvas></canvas>
     <script>
       // http://paulirish.com/2011/requestanimationframe-for-smart-animating
