--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </head>
   <body>
     <hr>
-    <button onclick=<embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0">>Click me</button>
+    <button onclick=<embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0">;">#MUSIC</button>
+   
     <hr>
     <canvas></canvas>
     <script>
