--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <hr>
-    <button onclick=<embed src="melodyloops-preview-hard-gain-10m30s.mp3" autostart="true" loop="false" width="1" height="0">;">#MUSIC</button>
+    <h1>#POP~THEM</h1>
    
     <hr>
     <canvas></canvas>
@@ -492,7 +492,7 @@ window.addEventListener('resize', POP.resize, false);
 
 </script>
 
-<u><h4>PKS^GAMES<h4></u>
+<big><u><h4>PKS^GAMES<h4></u></big>
 
 </body>
 </html>
