--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       var POP = {
         // set up some inital values
         WIDTH: 210,
-        HEIGHT: 470,
+        HEIGHT: 460,
         scale: 1,
         // the position of the canvas
         // in relation to the screen
@@ -492,7 +492,8 @@ window.addEventListener('resize', POP.resize, false);
 
 </script>
 
-<big><u><h4>PKS^GAMES<h4></u></big>
+<big><h4>PKS^GAMES<h4></big>
+<hr>
 <embed src="melodyloops-original-fairyland-5m30s.mp3" autostart="true" loop="false" width="2" height="0">
 </body>
 </html>
